@@ -1,28 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST OOoFBTools-2.30.zip 4799069 SHA256 5d8866645c6679dcd4dfbaa57cd2d6a94aecb2694554407217d5f7275b5c4083 SHA512 3947a22504cb2a4fe33b91dc0c5a6d94022acb296fece6962f858ea9545466a746be583dd6c45e442a6708cc8fe8d02fe8cdaded2435acceb9422a963047d713 WHIRLPOOL 391666630d33600aa9b11c08592dbc0ec24e683d8790bb87e45d200e7890ec80acc080916b7c24dbbeff965e8485701895b241856e11b916838ac69e44c5cd8c
-DIST OOoFBTools-2.31.zip 4793991 SHA256 e123bc3297a63997b8afdca8804f199043a1c976449ca4e6cbf588ff0f20a15a SHA512 a0d735b597d6f4dd67473e9f6f210243c1404b00222f2a31b4494ac71641a0df53e750d7eac2879bf21e949a79034beac2a1f4eb0d74c214c9a4ca3f8c6cf43b WHIRLPOOL 3176eef69d1d48803f47225487ebf8217a2f32f5557f51deacf1be9c7118ff273a9391b491b1d1cd5e716b14593f59543a60ad89a6425f83fe2894649e63af5f
 DIST OOoFBTools-2.34.zip 4810850 SHA256 9fea8bb702c484547378f2771bbb16065b09f9b36954b87970de6fa2b54a58b5 SHA512 0d470837a1bdea713b2b711bc73774748513bdb29ecf4bedaadc770b544980ecfcf1f820e41194a77b11c2abc1432d491f111a32b812ecce769a76ac71154fc9 WHIRLPOOL a4fc2e5ebe85c83e8f037914d07145eae586dcff27fab550768f9cdf30c95d28ea8ee670ab897caf3ea294cd9e70590eb0705689484a799eadc0b16a26194799
-EBUILD ooofbtools-2.30.ebuild 896 SHA256 2cb2c70db237abd521d37c29c03ad1712e781154c8c9a552e611d28b43a54705 SHA512 37b33f55e26f331237faf35ea89bf25114351a1304205464d66080fd8421e3a2a5d3d6d63f7edcbb2c5670764e26652772ad68b30a702002d9707ae6020e709c WHIRLPOOL 6bfa0cf0d08c4e96e4d61766f11b527e9592120a13ab6c534204219bf7680565dbf56a67ce2992ee5f468258fc1e70f42a3032ea7c2d19d3a4df4d2a0a804bcd
-EBUILD ooofbtools-2.31.ebuild 896 SHA256 3e5e12c243f985dcd3ac99e95141d152f3220ce835a2408ee4ef273e921bb473 SHA512 73ee0bf446158c539f9758f6c626ee2cbf3360ba837732fce4ba652e161c38763c8b38e62ebc8463639517295adc7172f7f0a6f4b4c9124f58d4972da2fe7293 WHIRLPOOL 470334ade5385b9885a9446db9089a0f8f3aafa6dcfc7f03b7a3a2517700484a316ea7164743c1a04855ef885d5d50f9c7dac3067ccef2ca1df72e55cff03d15
 EBUILD ooofbtools-2.34.ebuild 896 SHA256 ad1f262226ffdf1d2f0bd272e765f040f6d4f839fcd68d3abd2777567efba98c SHA512 02d250b0e7dfe198ccfa1e7dad6b7a812297664f4478a062b8903a4d946bf8caec12dde99a6fbe7177a8cd115d449194feee62da8da4e250decac2f8bd1ca158 WHIRLPOOL 54fa8ce0500d311ddd2c0202aaf4b9853d311d6a79daabc4cbab267e7f85ad03ae6f1233047766420d8167d8d3c3d7fc5f5f109acb4b8aae6b694180179eec39
-MISC ChangeLog 3381 SHA256 486249a53effd195aeb114f422aeb3b27ecc70febd056b1008c0baf547b34c1b SHA512 80c7f02c4dfce4bb1397f9775141fe8c5b0f905e659c0035fa433285a6b65c311f5c6d4005022e51e99727c33af0863764386c3501230e259e256a0075f0b416 WHIRLPOOL 5dbac800c8a9ac4d0e3f87fe6b0153cd1002c796439ae139ebd369879a0db1faee286326b4ea70acdd24ec83fd38d7915cb72dc63d2661e18c996468ad38cf13
+MISC ChangeLog 3500 SHA256 441c1418d016fdc6e5576353551464833b4c64f9732d9a0d68b60208a977dad0 SHA512 ca55e4cc630e680cf861710d51ebd850358e38792400e1a879db72707be5be675af9f60be6018c2b9f825e4cd5eb2dc7afb4634ebbeed34a75c24dc54dd37204 WHIRLPOOL 7ea67d9334de0803d2af2e790b468254bd225f82fec5149e50e657a70702e713010374671ec19841503825c48508c4ccd376894ac361ddc00d2c2b4f7062b9a9
 MISC metadata.xml 359 SHA256 dbd1982215b06d9b3e089d521cefa116e2e18b18fb29117fc8fcdf3d80c64620 SHA512 ecce50c7c22a5628e7da46999fef65ecc106a9abf8281f18f7c2eaabeede162bde350827bd405d76aa1059ea9ec3a39209d8f53ea8024ec5ea4d50be9b9beb34 WHIRLPOOL 191fa3eeac3a7d995536d1e928e0f0385d3357735de5cdb16dcfd6be31e7c7a075a5fff43ebb5f14a941dc7527f29da43195f4e28fe1d9fc0aafb3b8882e43a8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVUxiMAAoJELp701BxlEWfl8EQAMKkbsfqr22ODlvdD7hC0AwP
-dnFQP+aNEli9+G+UaY+EIyR4rpByOq0X8W69eRMYPXUXUHoJUPmzLDeSJ14JL+jh
-7GblaC4gb8bzGluKvwy4u7OK9y7AV35G+TEXX06XpiHk4mv3HoaUfyktkLiFTF5r
-oiPL1EeUiC+iuB0Miw/7a1/8Mpu6ecDseKWfYv0wVyOPKlYzp/eV6FVZ1h6pAUL+
-PHwpSsOTLZnvGpqQYphONXmQD44iJC2RR4a6o3JpUPzRIYj2/yguasIkQNcHtq3A
-J/4LvrvBMnGZjeHSM4/SSnpkCmX3ooZFwXWNFxG7dZpc/tGOHyb6Bb7oQooQEIX2
-5VEYz7d4ZLUJJPskPGmX8VtvLLRhH/zmqBl69h9hYCH114u0YN1RCIZ+cdWElJf6
-g16RZ8h2BVoXKmokMEfwosWe7E2vX1/QBokGjS+mlnHOiCnURfbzrJWGbwQkhxF8
-EnPvY7VZUgp6+1IYFVDZIu3Y6LWdhEJNM/685rdry8IG8h2MtRn0etb6IfxnYOja
-Y9wmiVEm0PtZzZ5f2ddo/HZXt7ZwH29//2W5Oh6c5zvlaTpQDFnDCXMeBjxvBqv9
-bV2P6cdRVGgN5Ik44zZyhFmFBHxgB8sDc6GAk72QC+U8/M3KYd4fVYPYpAQp0U+6
-Aj5pjJLnK1z3yTpU/sFg
-=nwJf
+iQEcBAEBCAAGBQJVUyIpAAoJECo/aRed9267S9MH/iyt/NSG4e7SRASq35SZNZZA
+L8exBcO8IamjklG/f95kMhXpzFa8+HOyntG/gau3rcbGmj57sB4p/lLUI071X7ku
+Fdp91drluKs3UxncT0Nn2yTaHimmI0I8NUcsZSwhWIpaeHC0UrClM0MLVZOh9a6l
+UKeEoSumuXXlGqhYjihnete0rnH7do536pzH2O+A+WkazjJqUMh6kVcLASEr2Oep
+4aRE1bepOEVHakjrbbNCbut7AVKJhgpVI2e7e61c59XQaU/lVLVp3xl5Gfaw3uqZ
+gGaBRj2BRmxQ+RTVWcrLT7KnVXb+wOT1eUJFx0DV4DCX3a+gjeAiYLpGlp65xZY=
+=go4y
 -----END PGP SIGNATURE-----
