@@ -1,14 +1,0 @@
-DEFINED_PHASES=install postinst prepare prerm unpack
-DEPEND=app-arch/unzip office_implementation_libreoffice? ( || ( app-office/libreoffice app-office/libreoffice-bin ) ) office_implementation_openoffice? ( || ( app-office/openoffice app-office/openoffice-bin ) ) app-arch/unzip
-DESCRIPTION=Extension for converting and processing eBooks in FictionBook2 format with validator
-EAPI=5
-HOMEPAGE=https://sourceforge.net/projects/fbtools/
-IUSE=office_implementation_libreoffice office_implementation_openoffice
-KEYWORDS=amd64 x86
-LICENSE=GPL-3
-RDEPEND=dev-libs/libxml2 office_implementation_libreoffice? ( || ( app-office/libreoffice app-office/libreoffice-bin ) ) office_implementation_openoffice? ( || ( app-office/openoffice app-office/openoffice-bin ) )
-REQUIRED_USE=|| ( office_implementation_libreoffice office_implementation_openoffice )
-SLOT=0
-SRC_URI=mirror://sourceforge/fbtools/files/release/OOoFBTools-2.31.zip
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	office-ext-r1	370fdf6c0ffd835405efe2e8e16d1771	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=47833b3daa6c00993c8a7f936ef9689b
