@@ -1,6 +1,10 @@
 # ChangeLog for app-officeext/ooofbtools
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-officeext/ooofbtools/ChangeLog,v 1.22 2015/05/13 09:25:32 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-officeext/ooofbtools/ChangeLog,v 1.23 2015/05/13 10:06:33 pinkbyte Exp $
+
+  13 May 2015; Sergey Popov <pinkbyte@gentoo.org> -ooofbtools-2.30.ebuild,
+  -ooofbtools-2.31.ebuild:
+  Drop old
 
   13 May 2015; Agostino Sarubbo <ago@gentoo.org> ooofbtools-2.34.ebuild:
   Stable for x86, wrt bug #548662
